--- a/package.json
+++ b/package.json
@@ -1,27 +1,24 @@
 {
-  "name": "clementinejs-fcc",
-  "version": "1.0.1",
-  "description": "The elegant and lightweight boilerplate for full stack JavaScript.",
+  "name": "timestamp-fcc",
+  "version": "1.0.0",
+  "description": "Send a date, get a date back.",
   "main": "server.js",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/johnstonbl01/clementinejs-fcc"
+    "url": "git+https://github.com/gkobilansky/timestamp"
   },
   "homepage": "http://www.clementinejs.com/",
-  "bugs": "https://github.com/johnstonbl01/clementinejs-fcc/issues",
+  "bugs": "https://github.com/gkobilansky/timestamp/issues",
   "keywords": [
-    "MongoDB",
-    "Mongoose",
-    "full stack",
     "Express",
     "Node",
     "javascript",
-    "boilerplate"
+    "freecodecamp"
   ],
   "scripts": {
   "start": "node server.js"
   },
-  "author": "Blake Johnston",
+  "author": "Gene Kobilansky",
   "license": "MIT",
   "dependencies": {
     "dotenv": "^1.2.0",
