--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 GITHUB_KEY=ada05cdaf198f5587058
 GITHUB_SECRET=0f01e4f9a6ce3901653a1556c1c786e08041c0bd
-MONGO_URI=mongodb://localhost:27017/urldatabase
+MONGO_URI= process.env.MONGODB_URI || `mongodb://${process.env.IP}:27017/urldatabase`;
 PORT=8080
 APP_URL=https://url-shortener-microservice-gkobilansky.c9users.io/
